# hololingo

./: .gitignore  LICENSE  README.md  hololingo.unitypackage  pyproject.toml
hololingo/: __main__.py
hololingo/api/: api.py  speaker_localization.py  utils.py
hololingo/demo/: demo.py  extract_audio.py  utils.py
